--- a/aux/mypapers.bib
+++ b/aux/mypapers.bib
@@ -23,21 +23,15 @@
 	journal = {Journal of Physics: Complexity},
 }
 
-@ARTICLE{medina2021giotto,
-	AUTHOR = {Tauzin, Guillaume and Lupo, Umberto and Tunstall, Lewis and
-	P\'{e}rez, Julian Burella and Caorsi, Matteo and {Medina-Mardones},
-	Anibal M. and Dassatti, Alberto and Hess, Kathryn},
-	TITLE = {{giotto-tda}: a topological data analysis toolkit for
-	machine learning and data exploration},
-	JOURNAL = {J. Mach. Learn. Res.},
-	FJOURNAL = {Journal of Machine Learning Research (JMLR)},
-	VOLUME = {22},
-	YEAR = {2021},
-	PAGES = {Paper No. 39, 6},
-	ISSN = {1532-4435},
-	MRCLASS = {62-04 (55N31 62R40)},
-	MRNUMBER = {4253732},
-	url={https://www.jmlr.org/papers/v22/20-325.html}
+@article{medina2021giotto,
+	author = {Guillaume Tauzin and Umberto Lupo and Lewis Tunstall and Julian Burella P\'{e}rez and Matteo Caorsi and Anibal M. Medina-Mardones and Alberto Dassatti and Kathryn Hess},
+	title = {giotto-tda: A Topological Data Analysis Toolkit for Machine Learning and Data Exploration},
+	journal = {Journal of Machine Learning Research},
+	year = {2021},
+	volume = {22},
+	number = {39},
+	pages = {1-6},
+	url = {http://jmlr.org/papers/v22/20-325.html}
 }
 
 @ARTICLE{medina2020prop1,
