--- a/aux/usualcmds.tex
+++ b/aux/usualcmds.tex
@@ -11,6 +11,7 @@
 % hyphenation
 \hyphenation{co-chain}
 \hyphenation{co-al-ge-bras}
+\hyphenation{boson-ization}
 
 % elements
 \newcommand{\id}{\mathsf{id}}
