--- a/aux/usualpapers.bib
+++ b/aux/usualpapers.bib
@@ -1239,3 +1239,20 @@ MRREVIEWER = {Bernhard A. Hanke},
 	MRREVIEWER = {Philippe Gaucher},
 	url = {http://www.mathematik.uni-regensburg.de/cisinski/ast.pdf}
 }
+
+@article {farber2003motion-planning,
+	AUTHOR = {Farber, Michael},
+	TITLE = {Topological complexity of motion planning},
+	JOURNAL = {Discrete Comput. Geom.},
+	FJOURNAL = {Discrete \& Computational Geometry. An International Journal
+	of Mathematics and Computer Science},
+	VOLUME = {29},
+	YEAR = {2003},
+	NUMBER = {2},
+	PAGES = {211--221},
+	ISSN = {0179-5376},
+	MRCLASS = {68T40 (55M30 68U05)},
+	MRNUMBER = {1957228},
+	DOI = {10.1007/s00454-002-0760-9},
+	URL = {https://doi.org/10.1007/s00454-002-0760-9},
+}
